--- a/src/components/text/text.module.scss
+++ b/src/components/text/text.module.scss
@@ -8,6 +8,11 @@
     line-height: 42.19px !important;
     letter-spacing: 0px;
 
+    @media screen and (max-width: 768px) {
+        font-size: calc(36px * .777) !important;
+        line-height: calc(32.81px * .777) !important;
+    }
+
 }
 
 .h2 {
@@ -15,6 +20,11 @@
     font-size: 31px !important;
     line-height: 36.33px !important;
     letter-spacing: 0px;
+    @media screen and (max-width: 768px) {
+        font-size: calc(31px * .777) !important;
+        line-height: calc(36.33px * .777) !important;
+    }
+
 }
 
 .h3 {
@@ -22,6 +32,10 @@
     font-size: 25px !important;
     line-height: 29.3px !important;
     letter-spacing: 0px;
+    @media screen and (max-width: 768px) {
+        font-size: calc(25px * .777) !important;
+        line-height: calc(29.3px * .777) !important;
+    }
 }
 
 .h4 {
@@ -29,6 +43,10 @@
     font-size: 20px !important;
     line-height: 23.44px !important;
     letter-spacing: 0px;
+    @media screen and (max-width: 768px) {
+        font-size: calc(20px * .777) !important;
+        line-height: calc(23.44px * .777) !important;
+    }
 }
 
 .h5 {
@@ -64,7 +82,7 @@
     font-weight: 400 !important;
     font-size: 16px !important;
     line-height: 24px !important;
-    letter-spacing: 0.5px ;
+    letter-spacing: 0.5px;
 
 }
 
