--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -7,6 +7,13 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        height: auto;
+        padding: 0 20px;
+        padding-top: 150px;
+        gap: 80px;
+    }
 }
 
 .courses {
@@ -15,6 +22,11 @@
     padding: 100px;
     background-color: #FFFFFF;
     align-items: center;
+    @media screen and (max-width: 768px) {
+        padding: 100px 20px;
+        gap: 50px;
+        
+    }
 
     .courseCardContainer {
         margin-top: 60px;
@@ -26,6 +38,12 @@
         align-items: center;
         gap: 30px;
 
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            align-items: center;
+            gap: 50px;
+            
+        }
     }
 }
 
