--- a/src/partials/footer/footer.module.scss
+++ b/src/partials/footer/footer.module.scss
@@ -2,17 +2,30 @@
 
 .footer {
     background-color: white;
-    // border: 1px solid #0A142F;
-
     display: flex;
     flex-direction: column;
-    padding:50px 0 ;
+    padding: 50px;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 768px) {
+        padding: 20px 40px;
+        // flex-direction: column;
+        gap: 20px;
+    }
 
 
     .footerTop {
         display: flex;
         justify-content: space-between;
 
+        @media screen and (max-width: 768px) {
+            padding: 20px 0;
+            flex-direction: column;
+            gap: 20px;
+            justify-content: center;
+            // align-items: center;
+            gap: 20px;
+        }
 
         .logoAndcontact,
         .company,
@@ -32,7 +45,11 @@
             display: flex;
             align-items: center !important;
             justify-content: center;
+            margin: 20px 0;
 
+            @media screen and (max-width: 768px) {
+                width: 100%;
+            }
 
             .subscribeEmail {
                 width: 271.09124755859375px;
@@ -41,12 +58,15 @@
                 border-radius: 30px;
                 background-color: #FFFFFF;
 
+                @media screen and (max-width: 768px) {
+                    width: 100%;
+                }
 
                 input {
                     border-radius: 30px;
                     background-color: inherit;
                     height: 100%;
-                    // width: 100%;
+                    width: 90%;
                     padding: 10px 15px;
                     outline: none;
 
@@ -74,6 +94,13 @@
         justify-content: space-between;
         height: 100px;
         align-items: center;
+
+        @media screen and (max-width: 768px) {
+            padding: 20px 0;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 50px;
+        }
 
         .termsPrivacyCookie {
             display: flex;
