--- a/src/pages/contact-us/contactus.module.scss
+++ b/src/pages/contact-us/contactus.module.scss
@@ -8,10 +8,20 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+    padding: 30px;
+
+    @media screen and (max-width:576px) {
+        flex-direction: column;
+        padding: 150px 10px;
+        height: auto;
+        margin-bottom: 100px;
+        text-align: center;
+        height: 90vh;
+    }
 }
 
 .card {
-    width: 70%;
+    width: min(96%, 1000px);
     margin: 0px auto;
     height: 602px;
     border-radius: 10px;
@@ -19,21 +29,39 @@
     display: flex;
     box-shadow: 5px 5px 15px 5px #00000040;
     margin-bottom: 200px;
+    gap: 30px;
+
+    @media screen and (max-width:576px) {
+        flex-direction: column;
+        padding: 50px 10px;
+        height: auto;
+        margin-bottom: 100px;
+
+    }
+
 
     .left {
         background: linear-gradient(180deg, #00AEEF 0%, #004071 100%);
         height: 100%;
-        width: 40%;
+        flex: 40%;
         border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding: 40px;
+
+        @media screen and (max-width:576px) {
+            height: 70vh;
+
+        }
     }
 
-    .right{
+    .right {
         padding: 50px;
-        width: 60%;
+        flex: 60%;
+        // border: #00000040 solid 1px;
+        padding: 10px;
     }
 
     .circle {
