--- a/src/pages/edu-tech/edutech.module.scss
+++ b/src/pages/edu-tech/edutech.module.scss
@@ -7,4 +7,11 @@
     align-items: center;
     justify-content: space-evenly;
 
+    @media screen and (max-width:576px) {
+        height: auto;
+        flex-direction: column;
+        padding: 20px;
+        gap: 40px;
+    }
+
 }
