--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -58,6 +58,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    @media screen and (max-width: 768px) {
+        height: auto;
+        padding: 50px 20px;
+        gap: 20px;
+        
+        
+    }
 }
 
 .testimony {
