--- a/src/pages/it-solutions/itsolutions.module.scss
+++ b/src/pages/it-solutions/itsolutions.module.scss
@@ -6,6 +6,14 @@
     justify-content: center;
     display: flex;
     padding: 100px;
+
+    @media screen and (max-width:900px) {
+        padding: 50px;
+    }
+
+    @media screen and (max-width:576px) {
+        padding: 20px;
+    }
 }
 
 .services {
@@ -16,7 +24,11 @@
     border-radius: 30px;
     height: 'fit-content';
     backdrop-filter: blur(12px);
-    box-shadow: 4px 4px 7.5px 0px #0000000D
+    box-shadow: 4px 4px 7.5px 0px #0000000D;
+
+    @media screen and (max-width:576px) {
+        width: '100%';
+    }
 }
 
 .ourwork {
@@ -30,19 +42,29 @@
     justify-content: space-evenly;
     padding: 0px 100px;
     gap: 50px;
+
+    @media screen and (max-width:576px) {
+        flex-direction: column;
+        height: auto;
+        padding: 70px 29px;
+    }
 }
 
 .expertise {
-    // width: 100%;
     height: 584px;
     gap: 40px;
     border-radius: 35.39px;
-    // padding-top: 70px;
-    // padding-bottom: 70px;
     background: linear-gradient(180deg, #00AEEF 0%, #E1F4FD 100%);
     padding: 70px 100px;
     margin: 0 100px;
 
+    @media screen and (max-width:576px) {
+        // flex-direction: column;
+        width: 90%;
+        height: auto;
+        padding: 70px 29px;
+        margin: auto;
+    }
 }
 
 .personalize {
@@ -58,12 +80,22 @@
     justify-content: start;
     padding: 0 100px;
     // top: -48px;
-    
+
+    @media screen and (max-width:576px) {
+        flex-direction: column;
+        width: 90%;
+        height: auto;
+        padding: 70px 29px;
+        margin: 50px auto;
+        gap: 50px;
+    }
+
 
 }
+
 .circle {
-    background:  #B0C3FF40;
-    
+    background: #B0C3FF40;
+
     width: 101px;
     height: 101px;
     border-radius: 100px;
