--- a/src/partials/footer/footer.module.scss
+++ b/src/partials/footer/footer.module.scss
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
 
     @media screen and (max-width: 768px) {
-        padding: 20px 40px;
+        padding: 20px;
         // flex-direction: column;
         gap: 20px;
     }
@@ -49,6 +49,8 @@
 
             @media screen and (max-width: 768px) {
                 width: 100%;
+                height: auto;
+                padding: 50px 0px;
             }
 
             .subscribeEmail {
@@ -98,8 +100,10 @@
         @media screen and (max-width: 768px) {
             padding: 20px 0;
             flex-direction: column;
-            gap: 20px;
+            gap: 50px;
             margin-bottom: 50px;
+            height: auto;
+            text-align: center;
         }
 
         .termsPrivacyCookie {
