--- a/src/partials/navbar/navbar.module.scss
+++ b/src/partials/navbar/navbar.module.scss
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    padding: 0 50px;
+    padding:  50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
     img {
