--- a/src/app/home/home.module.scss
+++ b/src/app/home/home.module.scss
@@ -1,92 +1,86 @@
-@use '../../styles/color.scss' as colors;
-
+@use "../../styles/color.scss" as colors;
 .header {
-    height: 560px;
-    width: 100%;
-    background: colors.$gradient5;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    @media screen and (max-width: 768px) {
-        flex-direction: column;
-        height: auto;
-        padding: 0 20px;
-        padding-top: 150px;
-        gap: 80px;
-    }
+  height: 560px;
+  width: 100%;
+  background: colors.$gradient5;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    height: auto;
+    padding: 0 20px;
+    padding-top: 100px;
+    gap: 80px;
+  }
 }
 
 .courses {
+  display: flex;
+  flex-direction: column;
+  padding: 100px;
+  background-color: #ffffff;
+  align-items: center;
+  @media screen and (max-width: 768px) {
+    padding: 100px 20px;
+    gap: 50px;
+  }
+  .courseCardContainer {
+    margin-top: 60px;
     display: flex;
-    flex-direction: column;
-    padding: 100px;
-    background-color: #FFFFFF;
-    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: stretch;
+    gap: 30px;
     @media screen and (max-width: 768px) {
-        padding: 100px 20px;
-        gap: 50px;
-        
+      flex-direction: column;
+      align-items: center;
+      gap: 50px;
     }
-
-    .courseCardContainer {
-        margin-top: 60px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-evenly;
-        align-items: center;
-        gap: 30px;
-
-        @media screen and (max-width: 768px) {
-            flex-direction: column;
-            align-items: center;
-            gap: 50px;
-            
-        }
-    }
+  }
 }
 
 .chooseus {
-    background: linear-gradient(180deg, #8ED8F8 0%, #E1F4FD 100%);
-    width: 95%;
-    height: 565px;
-    gap: 40px;
-    padding: 70px 0;
-    border-radius: 35.39px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    @media screen and (max-width: 768px) {
-        height: auto;
-        padding: 50px 20px;
-        gap: 20px;
-        
-        
-    }
+  background: linear-gradient(180deg, #8ed8f8 0%, #e1f4fd 100%);
+  width: 95%;
+  gap: 40px;
+  padding: 70px 0;
+  border-radius: 35.39px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  @media screen and (max-width: 768px) {
+    height: auto;
+    padding: 50px 20px;
+    gap: 20px;
+  }
 }
 
 .testimony {
-    padding: 100px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    align-items: center;
-
+  padding: 100px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
 }
 
 .transform {
-    width: 95%;
-    height: 632px;
-    opacity: 0.8;
-    background: linear-gradient(180deg, #8ED8F8 0%, #E1F4FD 100%);
-    border-radius: 35.39px;
-    margin: auto;
-    padding-top: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-gap: 50px;
-margin-bottom: 60px
+  width: 95%;
+  //   height: 632px;
+  opacity: 0.8;
+  background: linear-gradient(180deg, #8ed8f8 0%, #e1f4fd 100%);
+  border-radius: 35.39px;
+  margin: auto;
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  margin-bottom: 60px;
+  padding: 50px;
+  @media screen and (max-width: 768px) {
+    padding: 50px 20px !important;
+  }
 }
